crates/as2_pcode/src/parser/snapshots/rascal_as2_pcode__parser__tests__all_samples@trace_hello_world.pcode.snap
---
source: crates/as2_pcode/src/parser/tests.rs
expression: parsed
input_file: samples/as2_pcode/trace_hello_world.pcode
---
Ok:
  actions:
    - Push:
        - String: Hello World
    - Trace
  label_positions: {}
